# record-linker-v1

backend/: BACKGROUND_PROCESSING_DESIGN.md  CODE_REVIEW.md  README.md  Taskfile.yaml  alembic.ini  api-specification.md  api-usage.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4ef244758f3e_sync_models_with_schema.py  746c7a0b0e11_fix_timezone_aware_datetimes.py  a6c7a0b0e11_fix_timezone_aware_datetimes.py  f27e1aa08b63_initial_schema.py
backend/api_specs/: .gitignore  v1.md
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py  utils.py
backend/app/core/: config.py
backend/app/models/: __init__.py  audit_log.py  base.py  dataset.py  dataset_entry.py  dataset_entry_property.py  match_candidate.py  project.py  property_definition.py  task.py  user.py
backend/app/schemas/: __init__.py  audit_log.py  common.py  dataset.py  dataset_entry.py  dataset_entry_property.py  enums.py  jsonb_types.py  match_candidate.py  mixins.py  project.py  property_definition.py  task.py  user.py  validators.py
backend/app/services/: __init__.py  audit_service.py  base.py  candidate_service.py  dataset_service.py  entry_service.py  exceptions.py  matching_service.py  project_service.py  property_service.py  task_service.py  wikidata_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_audit_logs.py  test_candidates.py  test_datasets.py  test_entries.py  test_health.py  test_project_workflow.py  test_projects.py  test_properties.py  test_tasks.py  test_wikidata.py
backend/tests/test_models/: __init__.py  test_base.py  test_imports.py
backend/tests/test_schemas/: __init__.py  test_audit_log_schemas.py  test_common.py  test_dataset_entry_property_schemas.py  test_dataset_entry_schemas.py  test_dataset_schemas.py  test_enums.py  test_jsonb_types.py  test_match_candidate_schemas.py  test_project_schemas.py  test_property_definition_schemas.py  test_task_schemas.py  test_user_schemas.py
backend/tests/test_services/: __init__.py  (+2 more)
(+14 files in other folders)
